# purring-server

./: .gitignore  LICENSE  README.md  automaton_test.py  main.py  pyproject.toml  requirements.txt  sonar-project.properties
.github/workflows/: cd.yml  ci.yml
config/: config.yml  database.py  loader.py
protofiles/: report.proto  result.proto  tag.proto  testcase.proto
src/v1/gateways/: http.py  http_auth.py  response.py  rpc.py  rpc_auth.py
src/v1/models/: mittens_result.py  result.py  tag.py  testcase.py  user.py
src/v1/protofiles/: report_pb2.py  report_pb2.pyi  report_pb2_grpc.py  result_pb2.py  result_pb2.pyi  result_pb2_grpc.py  tag_pb2.py  tag_pb2.pyi  tag_pb2_grpc.py  testcase_pb2.py  testcase_pb2.pyi  testcase_pb2_grpc.py  user_pb2.py  user_pb2.pyi  user_pb2_grpc.py
src/v1/repositories/: result_repository.py  tag_repository.py  testcase_repository.py  user_repository.py
src/v1/services/: auth.py  manager.py  report_service.py  result_service.py  tag_service.py  testcase_service.py  user_service.py
test/: basic_test.py  test1.py  test2.py  test3.py  test4.py
